[metadata]
name = ConnectedVR360
version = attr: models.__version__
description = A Python package for fast and robust Connected VR360
long_description = file: README.md
# long_description_content_type = text/markdown
# author = Dat Nguyen Thanh
# author_email = ntdat017@gmail.com
# license = Apache License 2.0
# license_file = LICENSE
# platforms = any
# classifiers =
#     Programming Language :: Python :: 3 :: Only
# project_urls =
# 	Source = https://github.com
#     Bug Tracker = https://github.com//issues

# [options]
# packages = find:
# install_requires =
#     opencv-python>=4.0.1
# 	py360convert
# include_package_data = True
# zip_safe = False

# [options.entry_points]
# console_scripts =
#     connected_vr360 = command_line:main

# [options.packages.find]
# exclude = tests
